# target-az-parquet

./: .env.example  LICENSE  README.md  config.local.json  input.json  meltano.yml  pyproject.toml
target_az_parquet/: __init__.py  __main__.py  sinks.py  target.py
target_az_parquet/utils/: __init__.py  parquet.py
tests/: __init__.py  test_core.py
